ajout de details dans le README