@@ -3,3 +3,13 @@
 
 ### Dossier doc 
 Chaque dossier contient le code latex permettant de générer "nom du fichier".pdf
+
+### SDK
+Le projet fonctionne actuellement avec Amazon Corretto 21.
+
+### IntelliJ Configuration
+Ajouter ça dans les VM options (On utilise la version 21.0.6.
+
+```
+--module-path "/chemin/vers/javaFX/SDK/javafx-sdk-21.0.6/lib" --add-modules javafx.controls
+```
